Fixed last name underline and gap between first and last name in footer section and contact page.

--- a/src/components/formComponents/ContactForm/contactForm.scss
+++ b/src/components/formComponents/ContactForm/contactForm.scss
@@ -33,6 +33,7 @@
 			width: 100%;
 			display: flex;
 			flex-direction: row;
+			gap:6px;
 
 			@media (min-width: 767px) and (max-width: 1023px) {
 				min-width: 600px;
